objects/Assigned_Cleaner__c.object
<CustomObject><fields>
        <fullName>Cleaner__c</fullName>
        <label>Cleaner</label>
        <referenceTo>Cleaner__c</referenceTo>
        <relationshipLabel>Assigned Cleaners</relationshipLabel>
        <relationshipName>Assigned_Cleaners</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Job_Executed_Date__c</fullName>
        <label>Job Executed Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Job__c</fullName>
        <label>Job</label>
        <referenceTo>Jobs__c</referenceTo>
        <relationshipLabel>Assigned Cleaners</relationshipLabel>
        <relationshipName>Assigned_Cleaners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Information about cleaners</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Assigned Cleaner</label><nameField>
        <displayFormat>C -{000000}</displayFormat>
        <label>Assigned Cleaner Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Assigned Cleaners</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>